# pdf-comparison

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
scripts/: build_macos.sh  build_windows.ps1
src/pdfdiffstudio/: __init__.py  __main__.py  app.py  pdf_compare.py  typing_validator.py
tests/: test_pdf_compare.py  test_pdf_integration.py  test_typing_validator.py
